--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,57 @@
-opencv-python-headless==4.5.3.56
+annotated-types==0.6.0
+anyio==4.3.0
+beautifulsoup4==4.12.3
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+distro==1.9.0
+filelock==3.13.3
+Flask==3.0.2
+Flask-Cors==4.0.0
+future==1.0.0
+gevent==24.2.1
+google==3.0.0
+google-api-core==2.18.0
+google-auth==2.29.0
+google-cloud-vision==3.7.2
+googleapis-common-protos==1.63.0
+greenlet==3.0.3
+grpcio==1.62.1
+grpcio-status==1.62.1
+h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
+idna==3.6
 imutils==0.5.4
-numpy==1.21.5
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+numpy==1.26.4
+ocrspace==2.3.0
+openai==1.14.1
+opencv-python==4.9.0.80
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pydantic==2.6.4
+pydantic_core==2.16.3
+PySocks==1.7.1
+python-dotenv==1.0.1
+requests==2.31.0
+requests-file==2.0.0
+rsa==4.9
+scipy==1.12.0
+setuptools==69.2.0
+sniffio==1.3.1
+soupsieve==2.5
+tldextract==5.1.2
+tqdm==4.66.2
+typing_extensions==4.10.0
+urllib3==2.2.1
+Werkzeug==3.0.1
+zope.event==5.0
+zope.interface==6.2
