--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-opencv-python-headless==4.5.3.56
-imutils==0.5.4
-numpy==1.21.5
-google==3.0.0
-google-api-core==2.18.0
-google-auth==2.29.0
-google-cloud==0.34.0
-google-cloud-vision==3.7.2
-googleapis-common-protos==1.63.0
+opencv-python-headless
+imutils
+numpy
+google-cloud-vision
+google-api-core
+google-auth
+google-cloud
+googleapis-common-protos
